argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
spec:
  ingressClassName: public
  rules:
    - host: argocd.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: argocd-server
                 port:
                   number: 80
