ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /nginx-web-app
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /argocd-dashboard
            pathType: Prefix
            backend:
              service:
                 name: argocd-server
                 port:
                   number: 443
